RESOLVED FIXED 186946
ASSERTION FAILED: !frame().animation().hasAnimations() in WebCore::FrameView::didDestroyRenderTree()
https://bugs.webkit.org/show_bug.cgi?id=186946
Summary ASSERTION FAILED: !frame().animation().hasAnimations() in WebCore::FrameView:...
Ryan Haddad
Reported 2018-06-22 16:18:34 PDT
The following assertion failure is seen on macOS with media/W3C/audio/networkState/networkState_initial.html and media/track/track-cue-rendering-horizontal.html: ASSERTION FAILED: !frame().animation().hasAnimations() ./page/FrameView.cpp(593) : void WebCore::FrameView::didDestroyRenderTree() 1 0x58f730579 WTFCrash 2 0x58276367c WebCore::FrameView::didDestroyRenderTree() 3 0x581da95ae WebCore::Document::destroyRenderTree() 4 0x581da9880 WebCore::Document::prepareForDestruction() 5 0x582757720 WebCore::Frame::setView(WTF::RefPtr<WebCore::FrameView, WTF::DumbPtrTraits<WebCore::FrameView> >&&) 6 0x58275b519 WebCore::Frame::createView(WebCore::IntSize const&, WebCore::Color const&, bool, WebCore::IntSize const&, WebCore::IntRect const&, bool, WebCore::ScrollbarMode, bool, WebCore::ScrollbarMode, bool) 7 0x10aa3e89a WebKit::WebFrameLoaderClient::transitionToCommittedForNewPage() 8 0x5825a258f WebCore::FrameLoader::transitionToCommitted(WebCore::CachedPage*) 9 0x5825a15d9 WebCore::FrameLoader::commitProvisionalLoad() 10 0x58254a21c WebCore::DocumentLoader::commitIfReady() 11 0x58254a582 WebCore::DocumentLoader::finishedLoading() 12 0x582554589 WebCore::DocumentLoader::maybeLoadEmpty() 13 0x582554748 WebCore::DocumentLoader::startLoadingMainResource(WebCore::ShouldContinue) 14 0x5825c086c WebCore::FrameLoader::continueLoadAfterNavigationPolicy(WebCore::ResourceRequest const&, WebCore::FormState*, WebCore::ShouldContinue, WebCore::AllowNavigationToInvalidURL)::$_14::operator()() const 15 0x5825c0509 WTF::Function<void ()>::CallableWrapper<WebCore::FrameLoader::continueLoadAfterNavigationPolicy(WebCore::ResourceRequest const&, WebCore::FormState*, WebCore::ShouldContinue, WebCore::AllowNavigationToInvalidURL)::$_14>::call() 16 0x58000cb2b WTF::Function<void ()>::operator()() const 17 0x58136cad5 WTF::CompletionHandler<void ()>::operator()() const 18 0x58259f687 WebCore::FrameLoader::continueLoadAfterNavigationPolicy(WebCore::ResourceRequest const&, WebCore::FormState*, WebCore::ShouldContinue, WebCore::AllowNavigationToInvalidURL) 19 0x5825bd795 WebCore::FrameLoader::loadWithDocumentLoader(WebCore::DocumentLoader*, WebCore::FrameLoadType, WTF::RefPtr<WebCore::FormState, WTF::DumbPtrTraits<WebCore::FormState> >&&, WebCore::AllowNavigationToInvalidURL, WebCore::ShouldTreatAsContinuingLoad, WTF::CompletionHandler<void ()>&&)::$_9::operator()(WebCore::ResourceRequest const&, WTF::WeakPtr<WebCore::FormState>&&, WebCore::ShouldContinue) const 20 0x5825bd675 WTF::Function<void (WebCore::ResourceRequest&&, WTF::WeakPtr<WebCore::FormState>&&, WebCore::ShouldContinue)>::CallableWrapper<WebCore::FrameLoader::loadWithDocumentLoader(WebCore::DocumentLoader*, WebCore::FrameLoadType, WTF::RefPtr<WebCore::FormState, WTF::DumbPtrTraits<WebCore::FormState> >&&, WebCore::AllowNavigationToInvalidURL, WebCore::ShouldTreatAsContinuingLoad, WTF::CompletionHandler<void ()>&&)::$_9>::call(WebCore::ResourceRequest&&, WTF::WeakPtr<WebCore::FormState>&&, WebCore::ShouldContinue) 21 0x5825fffc9 WTF::Function<void (WebCore::ResourceRequest&&, WTF::WeakPtr<WebCore::FormState>&&, WebCore::ShouldContinue)>::operator()(WebCore::ResourceRequest&&, WTF::WeakPtr<WebCore::FormState>&&, WebCore::ShouldContinue) const 22 0x5825eff66 WTF::CompletionHandler<void (WebCore::ResourceRequest&&, WTF::WeakPtr<WebCore::FormState>&&, WebCore::ShouldContinue)>::operator()(WebCore::ResourceRequest&&, WTF::WeakPtr<WebCore::FormState>&&, WebCore::ShouldContinue) const 23 0x58260217b WebCore::PolicyChecker::checkNavigationPolicy(WebCore::ResourceRequest&&, WebCore::ResourceResponse const&, WebCore::DocumentLoader*, WTF::RefPtr<WebCore::FormState, WTF::DumbPtrTraits<WebCore::FormState> >&&, WTF::CompletionHandler<void (WebCore::ResourceRequest&&, WTF::WeakPtr<WebCore::FormState>&&, WebCore::ShouldContinue)>&&, WebCore::PolicyDecisionMode)::$_2::operator()(WebCore::PolicyAction) 24 0x582601d3a WTF::Function<void (WebCore::PolicyAction)>::CallableWrapper<WebCore::PolicyChecker::checkNavigationPolicy(WebCore::ResourceRequest&&, WebCore::ResourceResponse const&, WebCore::DocumentLoader*, WTF::RefPtr<WebCore::FormState, WTF::DumbPtrTraits<WebCore::FormState> >&&, WTF::CompletionHandler<void (WebCore::ResourceRequest&&, WTF::WeakPtr<WebCore::FormState>&&, WebCore::ShouldContinue)>&&, WebCore::PolicyDecisionMode)::$_2>::call(WebCore::PolicyAction) 25 0x10a1fc6b1 WTF::Function<void (WebCore::PolicyAction)>::operator()(WebCore::PolicyAction) const 26 0x10aa3a0d1 WebKit::WebFrameLoaderClient::dispatchDecidePolicyForNavigationAction(WebCore::NavigationAction const&, WebCore::ResourceRequest const&, WebCore::ResourceResponse const&, WebCore::FormState*, WebCore::PolicyDecisionMode, WTF::Function<void (WebCore::PolicyAction)>&&) 27 0x5825efc45 WebCore::PolicyChecker::checkNavigationPolicy(WebCore::ResourceRequest&&, WebCore::ResourceResponse const&, WebCore::DocumentLoader*, WTF::RefPtr<WebCore::FormState, WTF::DumbPtrTraits<WebCore::FormState> >&&, WTF::CompletionHandler<void (WebCore::ResourceRequest&&, WTF::WeakPtr<WebCore::FormState>&&, WebCore::ShouldContinue)>&&, WebCore::PolicyDecisionMode) 28 0x58259ee31 WebCore::FrameLoader::loadWithDocumentLoader(WebCore::DocumentLoader*, WebCore::FrameLoadType, WTF::RefPtr<WebCore::FormState, WTF::DumbPtrTraits<WebCore::FormState> >&&, WebCore::AllowNavigationToInvalidURL, WebCore::ShouldTreatAsContinuingLoad, WTF::CompletionHandler<void ()>&&) 29 0x58259b10f WebCore::FrameLoader::load(WebCore::DocumentLoader*) 30 0x58259e0b4 WebCore::FrameLoader::load(WebCore::FrameLoadRequest&&) 31 0x583242de0 WebCore::UserInputBridge::loadRequest(WebCore::FrameLoadRequest&&, WebCore::InputSource) LEAK: 1 WebProcessPool LEAK: 1 WebPageProxy https://build.webkit.org/results/Apple%20High%20Sierra%20Debug%20WK2%20(Tests)/r233080%20(3787)/results.html
Attachments
Patch (1.55 KB, patch)
2018-10-19 14:11 PDT, Dean Jackson
graouts: review+
Alexey Proskuryakov
Comment 1 2018-06-27 10:47:32 PDT
Is this a regression?
Radar WebKit Bug Importer
Comment 2 2018-07-02 08:39:07 PDT
Ryan Haddad
Comment 3 2018-07-18 10:24:53 PDT
*** Bug 187670 has been marked as a duplicate of this bug. ***
Dean Jackson
Comment 4 2018-10-19 14:11:53 PDT
Dean Jackson
Comment 5 2018-10-19 14:18:47 PDT
Note You need to log in before you can comment on or make changes to this bug.