ASSERTION FAILED: !frame().animation().hasAnimations() in WebCore::FrameView::didDestroyRenderTree() https://bugs.webkit.org/show_bug.cgi?id=186946 <rdar://problem/41724248>

Reviewed by Antoine Quint.

If the incoming test has different enableWebAnimationsCSSIntegration options,
then we need to create a new WebView.

* DumpRenderTree/TestOptions.cpp:
(TestOptions::webViewIsCompatibleWithOptions const):

Canonical link: https://commits.webkit.org/205666@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237301 268f45cc-cd09-0410-ab3c-d52691b4dbfc